--- a/views/header.ejs
+++ b/views/header.ejs
@@ -25,7 +25,7 @@
               <li><hr class="dropdown-divider" /></li>
               <li><a class="dropdown-item" href="#">Coffee & Brew Gear</a></li> <!-- LINK TO BE ADDED -->
               <li><hr class="dropdown-divider" /></li>
-              <li><a class="dropdown-item" href="#">Merchandise</a></li> <!-- LINK TO BE ADDED -->
+              <li><a class="dropdown-item" href="/merch">Merchandise</a></li> <!-- LINK TO BE ADDED -->
           </ul>
           </li>
         </ul>
@@ -294,7 +294,7 @@
                           <li><hr class="dropdown-divider" /></li>
                           <li><a class="dropdown-item" href="#">Coffee & Brew Gear</a></li>
                           <li><hr class="dropdown-divider" /></li>
-                          <li><a class="dropdown-item" href="#">Merchandise</a></li>
+                          <li><a class="dropdown-item" href="/merch">Merchandise</a></li>
                       </ul>
                       </li>
                   </ul>
