MERCH AND MENU ADDED

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -21,7 +21,7 @@
               Products
           </a>
           <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Menu</a></li> <!-- LINK TO BE ADDED -->
+              <li><a class="dropdown-item" href="/menu">Menu</a></li> <!-- LINK TO BE ADDED -->
               <li><hr class="dropdown-divider" /></li>
               <li><a class="dropdown-item" href="#">Coffee & Brew Gear</a></li> <!-- LINK TO BE ADDED -->
               <li><hr class="dropdown-divider" /></li>
@@ -290,7 +290,7 @@
                           Products
                       </a>
                       <ul class="dropdown-menu">
-                          <li><a class="dropdown-item" href="#">Menu</a></li>
+                          <li><a class="dropdown-item" href="/menu">Menu</a></li>
                           <li><hr class="dropdown-divider" /></li>
                           <li><a class="dropdown-item" href="#">Coffee & Brew Gear</a></li>
                           <li><hr class="dropdown-divider" /></li>
