--- a/views/header.ejs
+++ b/views/header.ejs
@@ -23,7 +23,7 @@
           <ul class="dropdown-menu">
               <li><a class="dropdown-item" href="/menu">Menu</a></li> <!-- LINK TO BE ADDED -->
               <li><hr class="dropdown-divider" /></li>
-              <li><a class="dropdown-item" href="#">Coffee & Brew Gear</a></li> <!-- LINK TO BE ADDED -->
+              <li><a class="dropdown-item" href="/gear">Coffee & Brew Gear</a></li> <!-- LINK TO BE ADDED -->
               <li><hr class="dropdown-divider" /></li>
               <li><a class="dropdown-item" href="/merch">Merchandise</a></li> <!-- LINK TO BE ADDED -->
           </ul>
@@ -292,7 +292,7 @@
                       <ul class="dropdown-menu">
                           <li><a class="dropdown-item" href="/menu">Menu</a></li>
                           <li><hr class="dropdown-divider" /></li>
-                          <li><a class="dropdown-item" href="#">Coffee & Brew Gear</a></li>
+                          <li><a class="dropdown-item" href="/gear">Coffee & Brew Gear</a></li>
                           <li><hr class="dropdown-divider" /></li>
                           <li><a class="dropdown-item" href="/merch">Merchandise</a></li>
                       </ul>
