--- a/public/css/style.css
+++ b/public/css/style.css
@@ -19,6 +19,13 @@ nav,footer{
   background-color: #e8e8e1;
 }
 
+.coffeenbrewgear input[type=number]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+}
+
+.coffeenbrewgear input[type=number]{
+  text-align: center;
+}
 
 button:focus {
   outline: revert;
