--- a/views/gear.ejs
+++ b/views/gear.ejs
@@ -14,7 +14,7 @@
     <%- include('header.ejs') %>
 
 
-    <section class="coffee&brewgear">
+    <section class="coffeenbrewgear">
         <div class="container">
             <br><h2 style="text-align: center;">BREW GEAR</h2>
             <div class="row row-cols-1 row-cols-md-3 g-4 p-4 justify-content-center">
@@ -26,6 +26,10 @@
                                 <div class="card-body">
                                     <h5 class="card-title"><%= gear.gearName %></h5>
                                     <p class="card-text">PHP <%= gear.price %></p>
+                                    <button class="btn btn-dark minus">-</button>
+                                    <input type="number" name="" id=""class="quantity" value="0" style="display: inline-block; width: 35.41px ;height: 38px; background-color: #e8e8e1; margin: none;">
+                                    <button class="btn btn-dark plus">+</button>
+                                    <button class="btn btn-dark atc">ADD TO CART</button>
                                 </div>
                             </div>
                         </div>
@@ -43,6 +47,10 @@
                                 <div class="card-body">
                                     <h5 class="card-title"><%= gear.gearName %></h5>
                                     <p class="card-text">PHP <%= gear.price %></p>
+                                    <button class="btn btn-dark minus">-</button>
+                                    <input type="number" name="" id=""class="quantity" value="0" style="display: inline-block; width: 35.41px ;height: 38px; background-color: #e8e8e1; margin: none;">
+                                    <button class="btn btn-dark plus">+</button>
+                                    <button class="btn btn-dark atc">ADD TO CART</button>
                                 </div>
                             </div>
                         </div>
@@ -60,6 +68,10 @@
                                 <div class="card-body">
                                     <h5 class="card-title"><%= gear.gearName %></h5>
                                     <p class="card-text">PHP <%= gear.price %></p>
+                                    <button class="btn btn-dark minus">-</button>
+                                    <input type="number" name="" id=""class="quantity" value="0" style="display: inline-block; width: 35.41px ;height: 38px; background-color: #e8e8e1; margin: none;">
+                                    <button class="btn btn-dark plus">+</button>
+                                    <button class="btn btn-dark atc">ADD TO CART</button>
                                 </div>
                             </div>
                         </div>
@@ -77,6 +89,10 @@
                                 <div class="card-body">
                                     <h5 class="card-title"><%= gear.gearName %></h5>
                                     <p class="card-text">PHP <%= gear.price %></p>
+                                    <button class="btn btn-dark minus">-</button>
+                                    <input type="number" name="" id=""class="quantity" value="0" style="display: inline-block; width: 35.41px ;height: 38px; background-color: #e8e8e1; margin: none;">
+                                    <button class="btn btn-dark plus">+</button>
+                                    <button class="btn btn-dark atc">ADD TO CART</button>
                                 </div>
                             </div>
                         </div>
@@ -94,6 +110,10 @@
                                 <div class="card-body">
                                     <h5 class="card-title"><%= gear.gearName %></h5>
                                     <p class="card-text">PHP <%= gear.price %></p>
+                                    <button class="btn btn-dark minus">-</button>
+                                    <input type="number" name="" id=""class="quantity" value="0" style="display: inline-block; width: 35.41px ;height: 38px; background-color: #e8e8e1; margin: none;">
+                                    <button class="btn btn-dark plus">+</button>
+                                    <button class="btn btn-dark atc">ADD TO CART</button>
                                 </div>
                             </div>
                         </div>
@@ -104,6 +124,43 @@
     </section>
 
     <%- include('footer.ejs') %>
+
+    <script>
+        let minusButtons = document.getElementsByClassName("minus");
+        let plusButtons = document.getElementsByClassName("plus");
+        let atcButtons = document.getElementsByClassName("atc");
+        let quantityFields = document.getElementsByClassName("quantity");
+
+        for (let i = 0; i < minusButtons.length; i++) {
+            minusButtons[i].addEventListener("click", () => {
+                console.log(quantityFields[i].value);
+                let currentQuantity = parseInt(quantityFields[i].value);
+                if (currentQuantity > 0) {
+                    quantityFields[i].value = currentQuantity - 1;
+                }
+            });
+        }
+
+        for (let i = 0; i < plusButtons.length; i++) {
+            plusButtons[i].addEventListener("click", () => {
+                console.log(quantityFields[i].value);
+                let currentQuantity = parseInt(quantityFields[i].value);
+                if (currentQuantity >= 0) {
+                    quantityFields[i].value = currentQuantity + 1;
+                }
+            });
+        }
+
+        for (let i = 0; i < atcButtons.length; i++) {
+            atcButtons[i].addEventListener("click", () => {
+                if (quantityFields[i].value != 0){
+                    console.log("Added to Cart");
+                }
+                else{ console.log("Quantity is 0"); }
+            })
+        }
+        
+    </script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
