--- a/views/gear.ejs
+++ b/views/gear.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MERCH | CAUTION COFFEE</title>
+    <title>GEAR | CAUTION COFFEE</title>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous"/>
     <link rel="stylesheet" href="./css/style.css">
@@ -154,12 +154,42 @@
             atcButtons[i].addEventListener("click", (event) => {
                 let currentQuantity = parseInt(quantityFields[i].value);
                 if (currentQuantity > 0){
-                    console.log(event.target.parentElement.getElementsByClassName("card-title")[0].innerHTML)
+                    let title = event.target.parentElement.getElementsByClassName("card-title")[0].innerHTML;
                     let price = event.target.parentElement.getElementsByClassName("card-text")[0].innerHTML;
-                    let parts = price.split('PHP');
-                    let newPrice = parts[1].trim();
+                    let parts = price.split('PHP'); // SPLIT WORD 'PHP'
+                    let newPrice = parts[1].trim(); // TRIM REMAINING PRICE INLUCDING WHITESPACE
+
+                    console.log(title)
                     console.log(newPrice);
                     console.log(currentQuantity);
+
+                    const product = {
+                        title : title,
+                        price : newPrice,
+                        quantity : currentQuantity
+                    };
+                    
+                    fetch('/add-to-cart', {
+                        method: 'POST', 
+                        headers: {'Content-Type': 'application/json'},
+                        body: JSON.stringify(product) 
+                    })
+                    .then(response => {
+                        if (!response.ok) {
+                            throw new Error('Network response was not ok'); 
+                        }
+                        return response.json(); 
+                    })
+                    .then(data => {
+                        if (data.success) {
+                            alert('Product added to cart successfully!');
+                        } else {
+                            alert('Failed to add product to cart.');
+                        }
+                    })
+                    .catch(error => {
+                        console.error('Error adding product to cart:', error); // Handle errors
+                    });
                 }
             });
 
