--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>REGISTER | CAUTION COFFEE</title>
+    <title>LOGIN | CAUTION COFFEE</title>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous"/>
     <link rel="stylesheet" href="./css/style.css">
@@ -13,35 +13,21 @@
 
     <%- include('header.ejs') %>
 
-    <form action="/signup_process" method = 'post'>
-
-        <h1>Create Your Account</h1>
-
-        <label for="">First Name:</label>
-        <input type="text" name="fName" id="" required>
-
-        <label for="">Last Name:</label>
-        <input type="text" name="lName" id="" required>
-
-        <label for="">Email:</label>
-        <input type="email" name="email" id="" required>
-
-        <label for="">Username:</label>
-        <input type="text" name="uName" id="" required>
-
-        <label for="">Password:</label>
-        <input type="password" name="password" id="" required>
-
+    <div style="text-align: center;">
+        <h1>CART</h1>
+        <h1>Profile</h1>
+        <h2>User Details of <%= user.fName + " " + user.lName %></h2>
+        <h3>First Name: <%= user.fName %></h3>
+        <h3>Last Name: <%= user.lName %></h3>
+        <h3>Username: <%= user.username %></h3>
+        <h3>Email: <%= user.email %></h3>
         <br>
-        <button type="submit">Register</button>
-
-    </form>
-    
-    <br>
-    <a href="/login"><button type="button">Login</button></a>
+    </div>
 
     <%- include('footer.ejs') %>
-    
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+
 </body>
+
 </html>
