--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,6 +17,8 @@
     <% if (isLoggedIn) { %>
         <h2 style="text-align: center;">Hello <%= email %> (PLACEHOLDER ONLY)</h2>
     <% } %>
+
+    <%- include('footer.ejs') %>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 
