--- a/views/login.ejs
+++ b/views/login.ejs
@@ -15,7 +15,7 @@
 
     <h1>Login Now</h1>
 
-    <form action="/login_process" method = 'post'>
+    <form action="/login" method = 'post'>
 
         <label for="">Email:</label>
         <input type="email" name="email" id="" required>
