MAJOR REDESIGN (ALMOST ALL)

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -38,7 +38,7 @@
                           xmlns="http://www.w3.org/2000/svg"
                           width="20"
                           height="20"
-                          fill="black"
+                          fill="#F5F5DC"
                           class="bi bi-bag"
                           viewBox="0 0 16 16"
                       >
@@ -52,7 +52,7 @@
                           xmlns="http://www.w3.org/2000/svg"
                           width="20"
                           height="20"
-                          fill="black"
+                          fill="#F5F5DC"
                           class="bi bi-search"
                           viewBox="0 0 16 16"
                       >
@@ -75,7 +75,7 @@
                           xmlns="http://www.w3.org/2000/svg"
                           width="20"
                           height="20"
-                          fill="black"
+                          fill="#F5F5DC"
                           class="bi bi-person-circle"
                           viewBox="0 0 16 16"
                           >
@@ -108,7 +108,7 @@
         
         <div class="container p-4">
           <!--LOGO-->
-          <a class="navbar-brand" href="/" style="z-index: 4;"><img src="./media/caution-logo.png" alt="" id="logo"></a>
+          <a class="navbar-brand" href="/" style="z-index: 4;"><img src="./media/caution-logo-yellow.png" alt="" id="logo" class="img-fluid"></a>
   
           <!--NAV-->
   
@@ -119,7 +119,7 @@
                           xmlns="http://www.w3.org/2000/svg"
                           width="20"
                           height="20"
-                          fill="black"
+                          fill="#F5F5DC"
                           class="bi bi-bag"
                           viewBox="0 0 16 16"
                       >
@@ -132,7 +132,7 @@
                           xmlns="http://www.w3.org/2000/svg"
                           width="20"
                           height="20"
-                          fill="black"
+                          fill="#F5F5DC"
                           class="bi bi-search"
                           viewBox="0 0 16 16"
                       >
@@ -154,7 +154,7 @@
                           xmlns="http://www.w3.org/2000/svg"
                           width="20"
                           height="20"
-                          fill="black"
+                          fill="#F5F5DC"
                           class="bi bi-person-circle"
                           viewBox="0 0 16 16"
                           >
@@ -189,7 +189,7 @@
                   xmlns="http://www.w3.org/2000/svg"
                   width="20"
                   height="20"
-                  fill="black"
+                  fill="#F5F5DC"
                   class="bi bi-bag"
                   viewBox="0 0 16 16"
               >
@@ -202,7 +202,7 @@
                   xmlns="http://www.w3.org/2000/svg"
                   width="20"
                   height="20"
-                  fill="black"
+                  fill="#F5F5DC"
                   class="bi bi-search"
                   viewBox="0 0 16 16"
               >
@@ -224,7 +224,7 @@
                   xmlns="http://www.w3.org/2000/svg"
                   width="20"
                   height="20"
-                  fill="black"
+                  fill="#F5F5DC"
                   class="bi bi-person-circle"
                   viewBox="0 0 16 16"
                   >
