--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,16 +7,42 @@
   margin: 0px;
 }
 
+header{
+  background-color: #752329 !important;
+}
+
+header a{
+  color: #F5F5DC !important;
+}
+
+.dropdown-menu a{
+  color: #212529 !important;
+}
+
+/*PARA MAGRESET LANG YUNG MGA FORM BUTTONS*/
 button {
   all: unset;
 }
+/*PARA MAGRESET LANG YUNG MGA FORM BUTTONS*/
 
-nav,footer{
-  background-color: #e8e8e1;
+/*feature cards*/
+.card {
+  transition: transform 0.6s ease-in-out;
+}
+.card:hover {
+  transform: scale(1.05);
+}
+.card-img-top {
+  height: 200px; 
+  object-fit: cover;
+}
+
+footer{
+    background-color: #e8e8e1;
 }
 
 #location{
-  background-color: #e8e8e1;
+    background-color: #e8e8e1;
 }
 
 .coffeenbrewgear input[type=number]::-webkit-inner-spin-button {
