--- a/views/login.ejs
+++ b/views/login.ejs
@@ -4,18 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LOGIN | CAUTION COFFEE</title>
+    <link rel="icon" href="./media/favicon-l.png" type="image/png">
+
+    <!-- STYLE LINKS -->
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous"/>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="https://unpkg.com/bs-brain@2.0.4/components/testimonials/testimonial-3/assets/css/testimonial-3.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 
 <body>
 
     <%- include('header.ejs') %>
 
-    <h1>Login Now</h1>
-
-    <form action="/login" method = 'post'>
+    <!-- <form action="/login" method = 'post'>
 
         <label for="">Email:</label>
         <input type="email" name="email" id="" required>
@@ -25,12 +29,68 @@
 
         <button type="submit">Log In</button>
 
-    </form>
+    </form> -->
 
-    <a href="/signup"><button type="button">Register</button></a>
+    <!-- <a href="/signup"><button type="button">Register</button></a> -->
+
+    <section class="vh-100" style="background-color: #f0f0f0; background-size: cover; background-position: center;">
+        <div class="container py-5 h-100">
+          <div class="row d-flex justify-content-center align-items-center h-100">
+            <div class="col col-xl-10">
+              <div class="card-signin" style="border-radius: 1rem; background-color: #ffffff;">
+                <div class="row g-0">
+                  <div class="col-md-6 col-lg-5 d-none d-md-block">
+                    <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-login-form/img1.webp"
+                      alt="login form" class="img-fluid" 
+                      style="border-radius: 1rem 0 0 1rem; width: 100%; height: 100%; object-fit: cover;" />
+                  </div>
+                  <div class="col-md-6 col-lg-7 d-flex align-items-center">
+                    <div class="card-body p-4 p-lg-5 text-black">
+
+                        <form action="/login" method = 'post'>
+      
+                            <div class="d-flex align-items-center mb-3 pb-1">
+                            <span class="h1 fw-bold mb-0">Welcome to Caution Coffee!</span>
+                            </div>
+        
+                            <h5 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Sign into your account</h5>
+        
+                            <!-- Email input field -->
+                            <div class="form-outline mb-4">
+                            <label class="form-label" for="form2Example17">Email Address</label>
+                            <input type="email" id="form2Example17" class="form-control form-control-lg" name="email" required/>
+                            </div>
+                            
+                            <!-- Password input field -->
+                            <div class="form-outline mb-4">
+                            <label class="form-label" for="form2Example27">Password</label>
+                            <input type="password" id="form2Example27" class="form-control form-control-lg" name="password" required/>
+                            </div>
+                            
+                            <!-- Submit button -->
+                            <div class="pt-1 mb-4">
+                            <button data-mdb-button-init data-mdb-ripple-init class="btn btn-dark btn-lg btn-block" type="submit">Login</button>
+                            </div>
+                            
+                            <a class="small text-muted" href="#!">Forgot password?</a>
+                            <p class="mb-5 pb-lg-2" style="color: #393f81;">Don't have an account? <a href="/signup"
+                                style="color: #393f81;">Register here</a></p>
+                            <a href="#!" class="small text-muted">Terms of Use</a>
+                            <a href="#!" class="small text-muted ms-2">Privacy Policy</a>
+                      </form>
+      
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+    </section>
 
     <%- include('footer.ejs') %>
 
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 
 </body>
