--- a/views/review.ejs
+++ b/views/review.ejs
@@ -4,6 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>REVIEWS | CAUTION COFFEE</title>
+    <link rel="icon" href="./media/favicon-l.png" type="image/png">
+
+    <!-- STYLE LINKS -->
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous"/>
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="https://unpkg.com/bs-brain@2.0.4/components/testimonials/testimonial-3/assets/css/testimonial-3.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
+    <!-- INPUT STYLE LINKS (TO BE REMOVED)-->
     <style>
         .icon{
             width: 50px;
@@ -29,9 +40,6 @@
             outline: 2px solid #f00;
         }
     </style>
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous"/>
-    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
 
@@ -42,17 +50,6 @@
     <form action="/review_process" method="POST" id="reviewForm">
 
         <h2>Rate Us</h2>
-
-        <!-- <input type="radio" id="" name="rating" value="1">
-        <label for="">1</label><br>
-        <input type="radio" id="" name="rating" value="2">
-        <label for="">2</label><br>
-        <input type="radio" id="" name="rating" value="3">
-        <label for="">3</label><br>
-        <input type="radio" id="" name="rating" value="4">
-        <label for="">4</label><br>
-        <input type="radio" id="" name="rating" value="5">
-        <label for="">5</label><br><br> -->
 
         <label>
             <input type="radio" id="" name="rating" value="1" required>
@@ -143,6 +140,7 @@
         });
     </script>
 
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 
 </body>
