--- a/views/index.ejs
+++ b/views/index.ejs
@@ -108,10 +108,11 @@
     </section>
     <!-- BEST SELLERS END -->
 
-    <!-- Divider -->
+    <!-- DIVIDER -->
     <div class="container my-5">
         <hr class="my-4">
     </div>
+    <!-- DIVIDER -->
 
     <!-- CUSTOMER REVIEW START -->
     <section class="bg-light py-5 py-xl-8"> 
@@ -125,7 +126,9 @@
         </div>
         </div><div class="container-fluid overflow-hidden"> 
         <div class="row gy-4 gy-md-0 gx-xxl-5">
-            <div class="col-12 col-md-4">
+
+             <!-- REVIEW CARDS -->
+            <!-- <div class="col-12 col-md-4">
             <div class="card border-0 border-bottom shadow-sm rounded-card" style="border-color: #752329;">
                 <div class="card-body p-4 p-xxl-5">
                 <figure>
@@ -186,11 +189,43 @@
                 </figure>
                 </div>
             </div>
-            </div>
+            </div> -->
+            <!-- REVIEW CARDS -->
+
+            <% if (reviews && reviews.length >= 1) { %> <!-- CHECK IF MAY LAMAN BA YUNG REVIEWS DATABASE -->
+                <% reviews.forEach(reviews => { %>
+
+                    <!-- REVIEW CARDS -->
+                    <div class="col-12 col-md-4">
+                        <div class="card border-0 border-bottom shadow-sm rounded-card" style="border-color: #752329;">
+                            <div class="card-body p-4 p-xxl-5">
+                            <figure>
+                                <figcaption>
+                                <div class="coffee-ratings mb-3" style="color: #752329;">
+                                    <% let rating = reviews.rating %>
+                                    <% for( let i = 0; i < rating; i++ ) { %>
+                                        <i class="fas fa-coffee"></i>
+                                    <% } %>
+                                </div>
+                                <blockquote class="bsb-blockquote-icon mb-4">
+                                    <h5 class="card-title">A Latte Room for Improvement</h5>
+                                    <p class="card-text"><%= reviews.message %></p>
+                                </blockquote>
+                                <h4 class="mb-2"><%= reviews.username %></h4>
+                                <p class="card-text"><%= reviews.dateCreated %></p>
+                                </figcaption>
+                            </figure>
+                            </div>
+                        </div>
+                    </div>
+                     <!-- REVIEW CARDS -->
+
+                <% }) %>
+            <% } %>
+                    
         </div>
         </div>
         
-    
         <!-- Button -->
         <div class="text-center mt-5">
         <a href="/review" class="btn btn-primary" style="background-color: #752329; border-color: #752329;">
