ADDED FEATURE PAGE

--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -13,7 +13,7 @@
       <i class="fab fa-instagram" style="color: #F5F5DC; font-size: 20px;"></i>
     </a>
     <!-- Google Maps -->
-    <a href="https://www.google.com/maps?gs_lcrp=EgZjaHJwLUNyNBgAIAAoAEoHhAIAEAAYgJABABGEEYFAABOgUIABAIaABwAHgAgAFYiAGdDZIBAzIExAEBsAEAwAEB&sclient=psy-ab" target="_blank" class="btn btn-floating mx-2" style="background-color: #000; border: none; border-radius: 50%; width: 40px; height: 40px; padding: 0; display: flex; align-items: center; justify-content: center;">
+    <a href="https://maps.app.goo.gl/6ZX9fPgftfGR6XVG6" target="_blank" class="btn btn-floating mx-2" style="background-color: #000; border: none; border-radius: 50%; width: 40px; height: 40px; padding: 0; display: flex; align-items: center; justify-content: center;">
       <i class="fas fa-map-marker-alt" style="color: #F5F5DC; font-size: 20px;"></i>
     </a>
   </div>
