--- a/views/header.ejs
+++ b/views/header.ejs
@@ -5,7 +5,7 @@
           <a class="nav-link active" aria-current="page" href="/">Home</a>
           </li>
           <li class="nav-item me-3">
-          <a class="nav-link" href="#">Feature</a> <!-- LINK TO BE ADDED -->
+          <a class="nav-link" href="/feature">Feature</a> <!-- LINK TO BE ADDED -->
           </li>
           <li class="nav-item me-3">
             <a class="nav-link" href="/review">Reviews</a>
@@ -274,7 +274,7 @@
                       <a class="nav-link active" aria-current="page" href="#">Home</a>
                       </li>
                       <li class="nav-item">
-                      <a class="nav-link" href="#">Feature</a>
+                      <a class="nav-link" href="/feature">Feature</a>
                       </li>
                       <li class="nav-item me-3">
                         <a class="nav-link" href="/review">Reviews</a>
