--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,14 +1,14 @@
 <header>
     <div class="container-fluid p-4" id="threeWords">
-        <ul class="navbar-nav" style="flex-direction: row !important;">
+        <ul class="navbar-nav nav-underline" style="flex-direction: row !important;">
           <li class="nav-item me-3">
-          <a class="nav-link active" aria-current="page" href="/">Home</a>
+          <a class="nav-link active" aria-current="page" href="/" id="home">Home</a>
           </li>
           <li class="nav-item me-3">
-          <a class="nav-link" href="/feature">Feature</a> <!-- LINK TO BE ADDED -->
+          <a class="nav-link" href="/feature" id="feature">Feature</a>
           </li>
           <li class="nav-item me-3">
-            <a class="nav-link" href="/review">Reviews</a>
+            <a class="nav-link" href="/review" id="review">Reviews</a>
             </li>
           <li class="nav-item dropdown">
           <a
@@ -17,6 +17,7 @@
               role="button"
               data-bs-toggle="dropdown"
               aria-expanded="false"
+              id="products"
           > <!-- LINK TO BE ADDED -->
               Products
           </a>
