--- a/views/review.ejs
+++ b/views/review.ejs
@@ -181,7 +181,7 @@
                     <textarea id="review" name="message" rows="4" cols="50" maxlength="300" required class="form-control" placeholder="Write your review..."></textarea>
                 </div>
 
-                <button type="submit" class="btn btn-dark w-100 submit-btn">Submit Review</button>
+                <button type="submit" class="btn btn-dark submit-btn" style = "margin: 0 auto; display: block;">Submit Review</button>
             </form>    
         </div>
     </div>
